2003-06-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shellapi.h (SHQUERYRBINFO): Add structure,
	(SHQueryRecycleBin[AW]. SHEmptyRecycleBin[AW]):Add prototypes.
	(SHERB_NOCONFIRMATION, SHERB_NOPROGRESSUI, SHERB_NOSOUND):
	Add defines. Thanks to Brett Hart <brett at ncubedtech dot com>

2003-06-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (GlobalCompact, GlobalFix, GlobalFlags,
	GlobalUnfix, GlobalUnWire, GlobalWire, LocalCompact,
	LocalFlags, LocalShrink, LockSegment, UnlockSegment): Add comment
	that these are obsolete no-ops.

2003-06-17  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winbase.h (GetProcessWorkingSetSize,
	GlobalCompact, LocalAlloc, LocalCompact, LocalReAlloc,
	LocalShrink, SignalObjectAndWait, WriteProcessMemory):
	Correct prototypes.

2003-06-18  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* include/winuser.h (TPM_RECURSE): Add define.

2003-06-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/test.c: #include <powrprof.h>.

2003-06-06  James E. Lucas  <xelloss@sourceforge.net>

	* include/powerprof.h: New file.
	* lib/powerprof.def: New file.

2003-06-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt (SLIST_HEADER): Add C90 anonymous struct
	protection.

2003-06-05  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/winuser.h (WNDCLASS[AW], WNDCLASSEX[AW]): Change type of
	hInstance members to HINSTANCE.
	Thanks to: Brenden T. <brenden@rcsis.com>

2003-06-05  Bart Oldeman  <bartoldeman@users.sourceforge.net>

	* include/lmaccess.h (UF_MNS_LOGON_ACCOUNT): Add define.
	* include/wingdi.h (LPRGBTRIPLE, LPRGBQUAD): Add typedefs.

2003-06-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/ntpoapi.h (POWER_INFORMATION_LEVEL): Remove.
	* include/winnt.h (POWER_INFORMATION_LEVEL): Add.
	* include/ddk/winddk.h (SINGLE_LIST_ENTRY,SLIST_HEADER):
	Remove.
	* include/ddk/ndis.h (NdisAllocateSpinLock): Add missing '\'.
